# sindarin-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: sindarin-template-config.cmake.in
include/: handlebars.h
src/: ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h  render.c  render.h  utils.c  utils.h
test/: test.h  test_blocks.c  test_escaping.c  test_expressions.c  test_helpers.c  test_main.c  test_partials.c  test_whitespace.c
